Closed
Bug 333591
Opened 19 years ago
Closed 19 years ago
Clear Private Data does not clear Saved Form Information
Categories
(Firefox :: Settings UI, defect, P1)
Firefox
Settings UI
Tracking
()
RESOLVED
FIXED
Firefox 2 alpha3
People
(Reporter: ria.klaassen, Assigned: pamg.bugs)
References
Details
(Keywords: fixed1.8.1, privacy, regression)
Attachments
(1 file, 1 obsolete file)
3.80 KB,
patch
|
bryner
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
- Set Clear Private Data to set Saved Form Information on close
- Restart Firefox
- The form information is still there
NB: In the Privacy > Saved Form tab in the Options window this button is grayed out.
I'm nearly positive that I reported this before, but I can't find the bug so I think it is closed but the problem is still there.
Updated•19 years ago
|
Assignee: nobody → pamg.bugs
Priority: -- → P1
Target Milestone: --- → Firefox 2 alpha2
Confirming bug! Still seeing this in the latest branch build: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20060414 Firefox/2.0a1 ID:2006041410
Reporter | ||
Comment 2•19 years ago
|
||
This is still the case in the places-less branch builds (I still see the sqlite file in the branch profile).
Flags: blocking-firefox2?
Comment 3•19 years ago
|
||
There's a bug to switch back to using Mork for form history on the branch, though I'm not sure what's up there. Brett, care to fill in the blanks here?
Comment 4•19 years ago
|
||
*** Bug 336815 has been marked as a duplicate of this bug. ***
Comment 6•19 years ago
|
||
Can't we just have 'Saved Form Information' clear 'formhistory.sqlite' as well if it exists?
Assignee | ||
Comment 7•19 years ago
|
||
I've confirmed this on nightlies from 1.8 branch (without Places) and trunk (with Places). It appears that the service is not correctly detecting when form information is present. It does need to be fixed for FF2b1, but it's not a Places bug -- not sure which component it properly belongs to.
Reporter | ||
Comment 8•19 years ago
|
||
There is no component Privacy, Security seems exaggerated and only Preferences or General seems to be appropriate.
Component: Places → Preferences
Keywords: privacy,
regression
Comment 9•19 years ago
|
||
Can somebody change the OS to all? I see this in my Linux builds as well.
Reporter | ||
Updated•19 years ago
|
OS: Windows XP → All
Reporter | ||
Updated•19 years ago
|
Hardware: PC → All
Assignee | ||
Comment 10•19 years ago
|
||
Fixes error in nsStorageFormHistory that caused it to never see form history entries, as well as restoring searchbar.mTextbox so sanitize.js can clear it.
Attachment #222277 -
Flags: review?(bryner)
Comment 11•19 years ago
|
||
Comment on attachment 222277 [details] [diff] [review]
Fixes two problems producing this bug
mFoo is generally a convention for private member variables, so I think using it here is a bad idea (especially since there already is a "private" member _textbox).
I think a better solution would be to name the property just "textbox" and change sanitize.js to match.
Attachment #222277 -
Flags: review?(bryner) → review-
Assignee | ||
Comment 12•19 years ago
|
||
(In reply to comment #11)
> I think a better solution would be to name the property just "textbox" and
> change sanitize.js to match.
Done.
Attachment #222277 -
Attachment is obsolete: true
Attachment #222284 -
Flags: review?(bryner)
Updated•19 years ago
|
Attachment #222284 -
Flags: review?(bryner) → review+
Updated•19 years ago
|
Flags: blocking-firefox2? → blocking-firefox2+
Comment 13•19 years ago
|
||
checked in
Updated•19 years ago
|
Target Milestone: Firefox 2 beta1 → Firefox 2 alpha3
You need to log in
before you can comment on or make changes to this bug.
Description
•