Fix for clearing saved form data using Clear Private Data (bug 333591). Patch by pamg, r+b181=me